fixed issue in width of responsive spacing control

--- a/assets/css/editorpanel.css
+++ b/assets/css/editorpanel.css
@@ -4468,7 +4468,8 @@ i.fipicon-angle-left:before {
   justify-content: center; }
 
 .premium-spacing-responsive-wrapper {
-  margin-right: 6px; }
+  margin-right: 6px;
+  width: 100%; }
 
 input::-webkit-outer-spin-button {
   -webkit-appearance: none;
